--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId "com.eyalbira.example"
-        minSdkVersion 15
-        targetSdkVersion 23
+        minSdkVersion 23
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
     }
@@ -20,8 +19,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile project (':loading-dots')
+    implementation "androidx.appcompat:appcompat:1.3.1"
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation project (':loading-dots')
 }
