--- a/loading-dots/build.gradle
+++ b/loading-dots/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 30
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 23
+        minSdk 23
+        targetSdk 30
         versionCode 3
         versionName "1.0.2"
     }
@@ -19,35 +18,4 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.1.0'
 }
-
-// Attributes for Maven Repository
-
-ext {
-    bintrayRepo = 'maven'
-    bintrayName = 'loading-dots'
-
-    publishedGroupId = 'com.eyalbira.loadingdots'
-    libraryName = 'LoadingDots'
-    artifact = 'loading-dots'
-
-    libraryDescription = 'Customizable bouncing dots view for smooth loading effect. Mostly used in chat bubbles to indicate the other person is typing.'
-
-    siteUrl = 'https://github.com/EyalBira/loading-dots'
-    gitUrl = 'https://github.com/EyalBira/loading-dots.git'
-
-    libraryVersion = '1.0.2'
-
-    developerId = 'eyalbira'
-    developerName = 'Eyal Biran'
-    developerEmail = 'eyalbira@gmail.com'
-
-    licenseName = 'The MIT License (MIT)'
-    licenseUrl = 'http://www.opensource.org/licenses/mit-license.php'
-    allLicenses = ["MIT"]
-}
-
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
