--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,4 +1,7 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+    id 'maven-publish'
+}
 
 android {
     compileSdkVersion 30
@@ -25,5 +28,5 @@ android {
 dependencies {
     implementation "androidx.appcompat:appcompat:1.3.1"
     implementation 'com.google.android.material:material:1.4.0'
-    implementation project (':loading-dots')
+    implementation project(':loading-dots')
 }
